--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,8 +22,8 @@ services:
       retries: 5
   api:
     container_name: marble-api
-    image: europe-west1-docker.pkg.dev/marble-infra/marble/marble-backend:v0.1.18
-    platform: linux/amd64
+    image: xendit-marble-backend:latest
+    pull_policy: never
     restart: always
     depends_on:
       - db
@@ -66,8 +66,8 @@ services:
       METABASE_GLOBAL_DASHBOARD_ID: ${METABASE_GLOBAL_DASHBOARD_ID:-}
   cron:
     container_name: marble-api-cron
-    image: europe-west1-docker.pkg.dev/marble-infra/marble/marble-backend:v0.1.18
-    platform: linux/amd64
+    image: xendit-marble-backend:latest
+    pull_policy: never
     restart: always
     depends_on:
       - api
@@ -90,8 +90,8 @@ services:
       FAKE_GCS: ${FAKE_GCS:-}
   app:
     container_name: marble-app
-    image: europe-west1-docker.pkg.dev/marble-infra/marble/marble-frontend:v0.1.20
-    platform: linux/amd64
+    image: xendit-marble-frontend:latest
+    pull_policy: never
     restart: always
     depends_on:
       - api
@@ -123,7 +123,8 @@ services:
       SEGMENT_WRITE_KEY: ${SEGMENT_WRITE_KEY:-hC8qrY2OLhUpl1Xycw523tbuClxlQR6u}
   firebase_auth:
     container_name: firebase-auth
-    image: europe-west1-docker.pkg.dev/marble-infra/marble/firebase-emulator:latest
+    image: xendit-firebase-emulator:latest
+    pull_policy: never
     restart: always
     ports:
       - ${FIREBASE_AUTH_EMULATOR_PORT:-9099}:9099
